# STM32F4_DevEnv

./: .gitignore  CMakeLists.txt  README.md  gdb.sh  gdb_src  instructions_to_load.txt  openocd.sh
src/: blink_typedefstruct.c  blinky(usinglibrary).c  blinky.c  main.cc  stm32f4xx_it.c
src/BlinkyUsingLib/: .mxproject  BlinkyUsingLib.ioc  Makefile
src/BlinkyUsingLib/Inc/: main.h
src/BlinkyUsingLib/Src/: main.c
